<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_editar_eventos"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/title_editar_evento" />

    <item
        android:id="@+id/navigation_lista_presentes"
        android:icon="@drawable/ic_giftcard_black_24dp"
        android:title="@string/title_lista_presentes" />

    <item
        android:id="@+id/navigation_convidados"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_convidados" />

    <item
        android:id="@+id/navigation_avalicacoes"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/title_avalicao" />

</menu>
