<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_logo_eventry" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_logo"
        android:layout_marginTop="@dimen/normal_margin">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_usuario">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_senha"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/blue_dark"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_enter"
        android:layout_marginTop="@dimen/normal_margin">

        <TextView
            android:id="@+id/text_view_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="ou" />

        <Button
            android:id="@+id/button_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_or"
            android:layout_marginTop="@dimen/normal_margin"
            android:drawableLeft="@mipmap/ic_logo_google"
            android:drawableStart="@mipmap/ic_logo_google"
            android:text="@string/login_google"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login_google"
            android:drawableLeft="@mipmap/ic_logo_facebook"
            android:drawableStart="@mipmap/ic_logo_facebook"
            android:text="@string/login_facebook"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:elevation="@dimen/normal_elevation"
        android:padding="@dimen/normal_margin">

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/register" />
    </RelativeLayout>
</RelativeLayout>