<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_margin">

    <EditText
        android:id="@+id/edit_text_nome_presente"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_backgroud"
        android:hint="@string/nome_presente"
        android:paddingLeft="20dp"
        android:scrollHorizontally="true"
        android:textColor="@color/black"
        android:textSize="15dp" />


    <EditText
        android:id="@+id/edit_text_des_presente"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/edit_text_nome_presente"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_backgroud"
        android:hint="@string/desc_presente"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/edit_text_des_presente"
        android:background="@color/blue_dark"
        android:text="@string/salvar"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button_salvar"
        android:background="@color/blue_dark"
        android:text="@string/cancelar"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

</RelativeLayout>